objects/hed__Product_Registry__mdt.object
<CustomObject>
    <description>Defines a product tile or a tool on the Education Cloud Settings page</description>
    <label>Product Registry</label>
    <pluralLabel>Product Registries</pluralLabel>
    <fields>
        <fullName>hed__Action__c</fullName>
        <description>Defines the specific Action or Category this registry refers to</description>
        <label>Action</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the custom metadata record is enabled</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Namespace__c</fullName>
        <description>Defines the product namespace for this registry</description>
        <label>Namespace</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Class_Name__c</fullName>
        <description>The class name to call for this product</description>
        <label>Class Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__API_Version__c</fullName>
        <description>The API version to use when calling the product method</description>
        <label>API Version</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>